add entity and homeController; test get .json file from POJO

--- a/src/main/web/resources/homepage.html
+++ b/src/main/web/resources/homepage.html
@@ -11,6 +11,11 @@
 
 <hr>
 
-<a href=${pageContext.request.contextPath}"/test/hello">Hello </a>
+<a href=http://localhost:8083/test/hello>Hello </a>
+
+<hr>
+
+<a href=http://localhost:8083/test/value>Value </a>
+
 </body>
 </html>
