add architecture and class from previous project

--- a/src/main/web/resources/homepage.html
+++ b/src/main/web/resources/homepage.html
@@ -28,7 +28,7 @@
 	</div>
 
 	<div class="container__item container__item--bottom">
-		<p>Inspired by <a target="_blank">Cezary Zalewski gggg</a>.</p>
+		<p>Inspired by <a target="_blank">Cezary Zalewski L</a>.</p>
 	</div>
 </div>
 
@@ -40,7 +40,7 @@
 		var input = inputValue.value;
 
 		$.ajax({
-			url: "http://localhost:8084/test/value/" + input,
+			url: "http://localhost:8084/api/value/" + input,
 			data: {},
 			type: "GET",
 			dataType: "json",
