prepare project to deploy network server

--- a/src/main/web/resources/homepage.html
+++ b/src/main/web/resources/homepage.html
@@ -45,7 +45,7 @@
 	</div>
 
 	<div class="container__item container__item--bottom">
-		<p>Inspired by <a target="_blank">Cezary Zalewski oo</a>.</p>
+		<p>Inspired by <a target="_blank">Cezary Zalewski t</a>.</p>
 	</div>
 </div>
 
@@ -59,7 +59,7 @@
 		var input = inputValue.value;
 
 		$.ajax({
-			url: "http://localhost:8085/api/value/" + input,
+			url: "http://localhost:8081/DimensionTolerances/api/value/" + input,
 			data: {},
 			type: "GET",
 			dataType: "json",
