Use clear code in project
change name params, methods, classes;
create `manager` packed with that `service` package;
share main service class to three separate ones;

--- a/src/main/web/resources/homepage.html
+++ b/src/main/web/resources/homepage.html
@@ -45,7 +45,7 @@
 	</div>
 
 	<div class="container__item container__item--bottom">
-		<p>Inspired by <a target="_blank">Cezary Zalewski t</a>.</p>
+		<p>Inspired by <a target="_blank">Cezary Zalewski</a>.</p>
 	</div>
 </div>
 
@@ -60,6 +60,7 @@
 
 		$.ajax({
 			url: "http://localhost:8081/DimensionTolerances/api/value/" + input,
+			// url: "http://localhost:8084/DimensionTolerances/api/value/" + input,
 			data: {},
 			type: "GET",
 			dataType: "json",
