--- a/src/main/web/resources/homepage.html
+++ b/src/main/web/resources/homepage.html
@@ -59,8 +59,8 @@
 		var input = inputValue.value;
 
 		$.ajax({
-			url: "http://localhost:8081/DimensionTolerances/api/value/" + input,
-			// url: "http://localhost:8084/DimensionTolerances/api/value/" + input,
+			url: "http://localhost:8081/dimension-tolerances/api/value/" + input,
+			// url: "http://164.132.97.42:8081/dimension-tolerances//api/value/" + input,
 			data: {},
 			type: "GET",
 			dataType: "json",
